# jetbot_description

./: CMakeLists.txt  package.xml
launch/: description.launch
urdf/: includes.xacro  jetbot.urdf.xacro
urdf/includes/gazebo/: imu.gazebo.xacro  inertias.xacro  jetbot.gazebo.xacro
urdf/includes/parts/: antenna.xacro  boards.xacro  camera.xacro  chassis.xacro
urdf/includes/parts/sensors/gps/: mtk3339.urdf.xacro
urdf/includes/parts/sensors/imu/: bno055.urdf.xacro
urdf/includes/parts/sensors/laser/: laser.urdf.xacro
urdf/includes/parts/sensors/realsense/: _d435.urdf.xacro
urdf/includes/parts/sensors/rgbcam/: camera.xacro
urdf/includes/parts/sensors/sonar/: hcsr04.urdf.xacro
urdf/includes/parts/wheels/: caster.xacro  wheel.xacro
